[package]
name = "totp"
version = "0.1.0"
authors = ["kingrong <huangjinrong09136@hellobike.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md-5 = "0.9"
hmac = "0.8"
sha-1 = "0.9"
generic-array = "0.14"
thiserror = "1.0"
chrono = "0.4"
